Git_WGBH_QC/src/objects/WGBH_ETM_Form__c.object
<CustomObject>
    <description>Form for capturing WGBH Employee Transaction Memo data for Human Resources.</description>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>A1000</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounting_Unit__c</fullName>
        <label>Accounting Unit</label>
        <referenceTo>WGBH_Accounting_Unit__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>WGBH_AUAC__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address: City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <label>Address: State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Street_1__c</fullName>
        <label>Address: Street 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Zip_Code__c</fullName>
        <label>Address: Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addresss_Street_2__c</fullName>
        <label>Addresss: Street 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Base_Salary__c</fullName>
        <label>Annual Base Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building_Location__c</fullName>
        <label>Building/Location</label>
        <picklist>
            <picklistValues>
                <fullName>10 GUEST</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 GUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-AMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIA-RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIA-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREENFIELD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVA NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA-AMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckSort_Contact__c</fullName>
        <label>CheckSort Contact</label>
        <referenceTo>WGBH_CheckSort_Contact__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_First_Name__c</fullName>
        <label>Emergency Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Last_Name__c</fullName>
        <label>Emergency Contact Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Main_Phone__c</fullName>
        <label>Emergency Contact Main Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Other_Phone__c</fullName>
        <label>Emergency Contact Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Middle_Name__c</fullName>
        <label>Employee Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_SSN__c</fullName>
        <label>Employee SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <inlineHelpText>Full Time = minimum of 40 hours/week
Part Time = less than 40 hours/week</inlineHelpText>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnic_Origin__c</fullName>
        <label>Ethnic Origin</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>etc...</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Comments__c</fullName>
        <label>HR Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours_per_Week__c</fullName>
        <label>Hours per Week</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_House_Affiliation__c</fullName>
        <label>In-House Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>AEEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NABET</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Tax_Status__c</fullName>
        <label>Marital/Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying Widow(er)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married Filing Jointly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married Filing Separately</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paperwork_Contact_Extension__c</fullName>
        <label>Paperwork Contact Extension</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paperwork_Contact_Job_Title__c</fullName>
        <label>Paperwork Contact Job Title</label>
        <referenceTo>WGBH_Job_Titles__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms (Paperwork Contact Job Title)</relationshipLabel>
        <relationshipName>WGBH_ETM_FormsPaperworkTitle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paperwork_Contact__c</fullName>
        <label>Paperwork Contact</label>
        <referenceTo>WGBH_Paperwork_Contact__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Level__c</fullName>
        <label>Process Level</label>
        <picklist>
            <picklistValues>
                <fullName>CCLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>New Memo = New ETM not submitted
Pending Approval = Submitted to first level of Approval in HR
HR Approved = Approved by HR Recruiter
HR Director Approved = Approved by HR Director
Closed - Not Approved = Declined for reasons stated in comments</inlineHelpText>
        <label>ETM Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Memo</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Director Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Employee_ID__c</fullName>
        <formula>Supervisor_Name__r.Employee_ID__c</formula>
        <label>Supervisor Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Extension__c</fullName>
        <label>Supervisor Extension</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <label>Supervisor Name</label>
        <referenceTo>WGBH_Supervisor__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <referenceTo>WGBH_Job_Titles__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms</relationshipLabel>
        <relationshipName>WGBH_ETM_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Requested__c</fullName>
        <label>Transaction Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vice_President__c</fullName>
        <label>Vice President</label>
        <picklist>
            <picklistValues>
                <fullName>Alexis Fife Rapo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Godley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brigid W. Sullivan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Bernstein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamie Parker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanne M. Hopkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jonathan C. Abbott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph M. Igoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lance W. Ozier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margaret Drain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marita Rivero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russell J. Peotter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan L. Kantrowitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzanne Zellner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinay Mehra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winifred Lenihan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGBH_Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>WGBH Employee ID #</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGBH_Job_Title__c</fullName>
        <label>Supervisor Job Title</label>
        <referenceTo>WGBH_Job_Titles__c</referenceTo>
        <relationshipLabel>WGBH ETM Forms (Supervisor Job Title)</relationshipLabel>
        <relationshipName>WGBH_ETM_FormsSupervisorTitle</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WGBH ETM Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Employee_Last_Name__c</columns>
        <columns>Employee_First_Name__c</columns>
        <columns>WGBH_Employee_ID__c</columns>
        <columns>Title__c</columns>
        <columns>Transaction_Requested__c</columns>
        <columns>Supervisor_Name__c</columns>
        <columns>Accounting_Unit__c</columns>
        <columns>Activity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ETM-{00000000}</displayFormat>
        <label>ETM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WGBH ETM Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Employee_Status_Validaiton</fullName>
        <active>true</active>
        <description>Validates that an end date is chosen for non Staff Employee Status</description>
        <errorConditionFormula>OR(ISPICKVAL(Employment_Status__c, &quot;Project Contract&quot;), ISPICKVAL(Employment_Status__c, &quot;Temporary&quot;), ISPICKVAL(Employment_Status__c, &quot;Freelance&quot;))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You must select an End Date for non-Staff positions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HoursPerWeek_Validaiton</fullName>
        <active>true</active>
        <description>Validates that hoursweek is &gt; or &lt; 40 depending on the Employment type selected</description>
        <errorConditionFormula>OR(AND(ISPICKVAL( Employment_Type__c , &quot;Full Time&quot;),  Hours_per_Week__c &lt; 40), AND(ISPICKVAL(Employment_Type__c, &quot;Part Time&quot;),  Hours_per_Week__c &gt; 39))</errorConditionFormula>
        <errorDisplayField>Hours_per_Week__c</errorDisplayField>
        <errorMessage>Hours per week must be &gt;= 40 for Full Time and &lt; 40 for Part time.</errorMessage>
    </validationRules>
</CustomObject>